# research-validator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
research-design/: SKILL.md
research-design/references/: alphaxiv-mcp-guide.md  conference-standards.md  consider-5-whys.md  consider-first-principles.md  consider-inversion.md  consider-occams-razor.md  contribution-types.md  critical-thinking-frameworks.md  experimental-design.md  honesty-protocol.md  mock-review-templates.md  novelty-framework.md  output-guidelines.md  research-principles.md  research-synthesis.md  research-wave-1-literature.md  research-wave-2-landscape.md  research-wave-3-venue.md  verification-agent.md
research-design/scripts/: arxiv_search.py  extract_metadata.py  openalex_client.py  paperswithcode.py  query_helpers.py  semantic_scholar.py  validate_citations.py
