[project]
name = "research-validator"
version = "0.1.0"
description = "Validates ML/AI research proposals with radical honesty before writing a paper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Alex Gorbatovski", email = "alexey.gorbatovski@gmail.com"},
]
keywords = ["research", "validation", "ml", "ai", "research-proposal", "peer-review", "claude-code-plugin", "claude-code-skills"]
dependencies = [
    "pyalex>=0.13",
    "requests>=2.28.0",
]
